--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+	    "proxyConfig":"src/proxy.conf.json"
           },
           "configurations": {
             "production": {
